[gd_scene load_steps=43 format=3 uid="uid://c8yl0ku1kr3mx"]

[ext_resource type="Script" path="res://scenes/PlayerLink.gd" id="1_udd1f"]
[ext_resource type="Texture2D" uid="uid://b7xs4acxivpl6" path="res://sprites/Zelda/Link/LinkAngriff.png" id="2_adko4"]
[ext_resource type="Texture2D" uid="uid://dwl46xib28ker" path="res://sprites/Zelda/Link/LunkRunning.png" id="3_oj4xk"]
[ext_resource type="Texture2D" uid="uid://b2eeh6p33k3gm" path="res://sprites/Zelda/Link/Lunk_death.png" id="3_svpt7"]
[ext_resource type="Shader" path="res://scenes/SceneShader.gdshader" id="4_dkim8"]
[ext_resource type="Shader" path="res://scenes/Dungeon.gdshader" id="5_ama3h"]
[ext_resource type="AudioStream" uid="uid://cony5w4nvm2wg" path="res://audio/RETRO Heroic.ogg" id="6_acc3w"]
[ext_resource type="AudioStream" uid="uid://1ov56m4vd5ei" path="res://audio/RETRO Dungeon.ogg" id="7_d3p28"]
[ext_resource type="Script" path="res://scenes/CanvasLayer.gd" id="7_v0bp6"]
[ext_resource type="AudioStream" uid="uid://b5u8hd7nu48k1" path="res://audio/RETRO Jump.ogg" id="8_66tn1"]
[ext_resource type="FontFile" uid="uid://ttjyhhvfcjh3" path="res://sprites/Mono10_v0.95/Mono10 Regular.ttf" id="8_hy4m4"]
[ext_resource type="AudioStream" uid="uid://cwx7xn0fmh6qn" path="res://audio/RETRO Lunk at my LVL completed.ogg" id="9_ua0he"]
[ext_resource type="AudioStream" uid="uid://blfj6dyvxi4wx" path="res://audio/RETRO Lunk at my Rupee.ogg" id="10_ik7vt"]
[ext_resource type="AudioStream" uid="uid://d2gjhdy88yt50" path="res://audio/RETRO Lunk at my Sword.ogg" id="11_wep2r"]
[ext_resource type="AudioStream" uid="uid://d2jtm7ghmiq7h" path="res://audio/RETRO Lunkser.ogg" id="12_d3xph"]
[ext_resource type="PackedScene" uid="uid://d0nn0afxbitka" path="res://scenes/canvas_layer.tscn" id="14_kuhgd"]
[ext_resource type="AudioStream" uid="uid://cgyvustf3tu1a" path="res://audio/RETRO Lunk at this skill issue.ogg" id="16_jh4jr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mta7j"]
size = Vector2(9, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xxx8r"]
atlas = ExtResource("2_adko4")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1f74"]
atlas = ExtResource("2_adko4")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2eeuf"]
atlas = ExtResource("2_adko4")
region = Rect2(96, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u31jy"]
atlas = ExtResource("2_adko4")
region = Rect2(144, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4c4j"]
atlas = ExtResource("2_adko4")
region = Rect2(192, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wmyc"]
atlas = ExtResource("2_adko4")
region = Rect2(240, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1un7"]
atlas = ExtResource("3_oj4xk")
region = Rect2(0, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aam28"]
atlas = ExtResource("3_oj4xk")
region = Rect2(48, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usie4"]
atlas = ExtResource("3_oj4xk")
region = Rect2(96, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr8sw"]
atlas = ExtResource("3_oj4xk")
region = Rect2(144, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8ckx"]
atlas = ExtResource("3_oj4xk")
region = Rect2(192, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4ih0"]
atlas = ExtResource("3_oj4xk")
region = Rect2(240, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxywh"]
atlas = ExtResource("3_oj4xk")
region = Rect2(288, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydu3r"]
atlas = ExtResource("3_oj4xk")
region = Rect2(336, 0, 48, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf1dk"]
atlas = ExtResource("3_oj4xk")
region = Rect2(96, 0, 48, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pwwve"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xxx8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1f74")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2eeuf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u31jy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4c4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wmyc")
}],
"loop": true,
"name": &"attack",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_svpt7")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1un7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aam28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usie4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr8sw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8ckx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4ih0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxywh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydu3r")
}],
"loop": true,
"name": &"default",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf1dk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0lba2"]
shader = ExtResource("4_dkim8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2esbb"]
shader = ExtResource("5_ama3h")

[sub_resource type="LabelSettings" id="LabelSettings_yr6ge"]
font = ExtResource("8_hy4m4")
font_size = 64
font_color = Color(0.843137, 0.780392, 0, 0)
outline_size = 6
outline_color = Color(0.568627, 0.517647, 0, 0)

[sub_resource type="Animation" id="Animation_nni3g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Game Over:label_settings:font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.843137, 0.780392, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Game Over:label_settings:outline_color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.568627, 0.517647, 0, 0)]
}

[sub_resource type="Animation" id="Animation_5vjpl"]
resource_name = "fade_to_black"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_co5kg"]
resource_name = "fade_to_norma"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Black:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_7lxg0"]
resource_name = "game_over"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Game Over:label_settings:font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.843137, 0.780392, 0, 0), Color(0.843137, 0.780392, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Game Over:label_settings:outline_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.568627, 0.517647, 0, 0), Color(0.568627, 0.517647, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w4lsg"]
_data = {
"RESET": SubResource("Animation_nni3g"),
"fade_to_black": SubResource("Animation_5vjpl"),
"fade_to_normal": SubResource("Animation_co5kg"),
"game_over": SubResource("Animation_7lxg0")
}

[node name="PlayerLink" type="CharacterBody2D"]
z_index = 2
position = Vector2(21, 72)
collision_layer = 3
collision_mask = 3
script = ExtResource("1_udd1f")

[node name="AttackTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_mta7j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pwwve")
animation = &"attack"

[node name="Camera2D" type="Camera2D" parent="."]
texture_filter = 3
position = Vector2(0, 1.19209e-07)
scale = Vector2(0.997173, 1.00956)
process_callback = 0
limit_left = -144
limit_right = 4800
limit_bottom = 190
limit_smoothed = true
position_smoothing_speed = 60.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_horizontal_offset = 1.0
drag_left_margin = 0.42
drag_top_margin = 0.5
drag_right_margin = 0.42
drag_bottom_margin = 0.5
editor_draw_drag_margin = true

[node name="Draußen" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/Draußen"]
material = SubResource("ShaderMaterial_0lba2")
offset_top = 216.0
offset_right = 480.0
offset_bottom = 288.0

[node name="Dungeon" type="CanvasLayer" parent="Camera2D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Camera2D/Dungeon"]
material = SubResource("ShaderMaterial_2esbb")
offset_right = 480.0
offset_bottom = 288.0

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]
script = ExtResource("7_v0bp6")

[node name="Black" type="ColorRect" parent="Camera2D/CanvasLayer"]
offset_right = 480.0
offset_bottom = 288.0
color = Color(0, 0, 0, 1)

[node name="Game Over" type="Label" parent="Camera2D/CanvasLayer"]
offset_left = 120.0
offset_top = 105.0
offset_right = 372.0
offset_bottom = 180.0
text = "Game Over"
label_settings = SubResource("LabelSettings_yr6ge")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera2D/CanvasLayer"]
libraries = {
"": SubResource("AnimationLibrary_w4lsg")
}

[node name="AudioStreamMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_acc3w")
volume_db = -12.5
autoplay = true

[node name="AudioStreamDungeon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d3p28")
volume_db = -10.0

[node name="AudioStreamJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_66tn1")
volume_db = 5.0
pitch_scale = 1.39

[node name="AudioStreamWon" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ua0he")

[node name="AudioStreamRupee" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_ik7vt")

[node name="AudioStreamSword" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_wep2r")

[node name="AudioStreamDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_d3xph")

[node name="AudioStreamGameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_jh4jr")

[node name="CanvasLayer" parent="." instance=ExtResource("14_kuhgd")]
visible = false
